# auth0-llamaindex

./: .env.example  .gitignore  LICENSE  NOTICE.txt  README.md  api.py  fga_config.py  pyproject.toml  requirements.txt  retriever.py  workflow.py
fga/: model.backup.fga.yaml  model.fga.yaml
scripts/: clear_fga_tuples.py  generate_paychecks.py  setup_fga.py
src/auth0_llamaindex/: api.py  client.py  fga_config.py  retriever.py  workflow.py
